[gd_scene load_steps=60 format=3 uid="uid://dcu0mt4e8ntit"]

[ext_resource type="Script" path="res://Scripts/card.gd" id="1_kahvh"]
[ext_resource type="Shader" path="res://shaders/card.gdshader" id="1_rdoxh"]
[ext_resource type="Texture2D" uid="uid://c4tdcleth8vlp" path="res://Assets/images/kort/Guy_card.png" id="2_iwdq0"]
[ext_resource type="Texture2D" uid="uid://co87noq1eieol" path="res://Assets/images/stat display.png" id="4_4oeem"]
[ext_resource type="Texture2D" uid="uid://bjugnvow22ug1" path="res://Assets/images/tag circle.png" id="4_iftc1"]
[ext_resource type="FontFile" uid="uid://donxec21iqi2o" path="res://Assets/fonts/PixelOperator8.ttf" id="5_htu7g"]
[ext_resource type="Texture2D" uid="uid://cuqg53q4edh2r" path="res://Assets/images/select border.png" id="6_fi7ot"]
[ext_resource type="Texture2D" uid="uid://tpb2pr6lpho2" path="res://Assets/images/ball.png" id="7_28c2y"]
[ext_resource type="FontFile" uid="uid://cxpul0hcnrfyt" path="res://Assets/fonts/PixelDigivolve-mOm9.ttf" id="7_ynav2"]
[ext_resource type="Texture2D" uid="uid://blekvhd3e4dqp" path="res://Assets/images/mult display.png" id="8_n5cfj"]
[ext_resource type="PackedScene" uid="uid://dmgxhbpwvwfrm" path="res://Scenes/description.tscn" id="9_sttlc"]
[ext_resource type="PackedScene" uid="uid://854dmrdy2jd0" path="res://Scenes/buy_button.tscn" id="10_2hy3d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ve337"]
shader = ExtResource("1_rdoxh")
shader_parameter/hit_opacity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gsysh"]
atlas = ExtResource("4_iftc1")
region = Rect2(0, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_mf0n0"]
atlas = ExtResource("4_iftc1")
region = Rect2(18, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv4yb"]
atlas = ExtResource("4_iftc1")
region = Rect2(36, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5bgl"]
atlas = ExtResource("4_iftc1")
region = Rect2(54, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lvjl"]
atlas = ExtResource("4_iftc1")
region = Rect2(72, 0, 18, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mgy0"]
atlas = ExtResource("4_iftc1")
region = Rect2(90, 0, 18, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_gpudn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsysh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mf0n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv4yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5bgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lvjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mgy0")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_arv3v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_usg58"]
atlas = ExtResource("6_fi7ot")
region = Rect2(0, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_0726e"]
atlas = ExtResource("6_fi7ot")
region = Rect2(60, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_r676f"]
atlas = ExtResource("6_fi7ot")
region = Rect2(120, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_4whpd"]
atlas = ExtResource("6_fi7ot")
region = Rect2(180, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_38hyq"]
atlas = ExtResource("6_fi7ot")
region = Rect2(240, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_e778y"]
atlas = ExtResource("6_fi7ot")
region = Rect2(300, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc17c"]
atlas = ExtResource("6_fi7ot")
region = Rect2(360, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkp6f"]
atlas = ExtResource("6_fi7ot")
region = Rect2(420, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_7oela"]
atlas = ExtResource("6_fi7ot")
region = Rect2(480, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax78j"]
atlas = ExtResource("6_fi7ot")
region = Rect2(540, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0sgj"]
atlas = ExtResource("6_fi7ot")
region = Rect2(600, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b5ww"]
atlas = ExtResource("6_fi7ot")
region = Rect2(660, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5qll"]
atlas = ExtResource("6_fi7ot")
region = Rect2(720, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvh8a"]
atlas = ExtResource("6_fi7ot")
region = Rect2(780, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_o64bd"]
atlas = ExtResource("6_fi7ot")
region = Rect2(840, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye167"]
atlas = ExtResource("6_fi7ot")
region = Rect2(900, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu8pv"]
atlas = ExtResource("6_fi7ot")
region = Rect2(960, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_alnmb"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1020, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl68p"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1080, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxgr2"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1140, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8u03"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1200, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_t05yp"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1260, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_vq18o"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1320, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkyhq"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1380, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hhkw"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1440, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdec1"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1500, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0ql5"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1560, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_uip6v"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1620, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt6dq"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1680, 0, 52, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg6hc"]
atlas = ExtResource("6_fi7ot")
region = Rect2(1740, 0, 52, 68)

[sub_resource type="SpriteFrames" id="SpriteFrames_pnysk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_usg58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0726e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r676f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4whpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38hyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e778y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc17c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkp6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7oela")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax78j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0sgj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b5ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5qll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvh8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o64bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye167")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu8pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alnmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl68p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxgr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8u03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t05yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vq18o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkyhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hhkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdec1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0ql5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uip6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt6dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg6hc")
}],
"loop": true,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6pkr"]
size = Vector2(48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vqkh"]
atlas = ExtResource("7_28c2y")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xicpk"]
atlas = ExtResource("7_28c2y")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2hpq"]
atlas = ExtResource("7_28c2y")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d306"]
atlas = ExtResource("7_28c2y")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gvjs"]
atlas = ExtResource("7_28c2y")
region = Rect2(96, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxsia"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vqkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xicpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2hpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d306")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gvjs")
}],
"loop": false,
"name": &"Ball",
"speed": 10.0
}]

[node name="Card" type="Node2D"]
z_index = 1
script = ExtResource("1_kahvh")

[node name="Textures" type="Node2D" parent="."]

[node name="ScaleNode" type="Node2D" parent="Textures"]
use_parent_material = true
scale = Vector2(3, 3)

[node name="StatDisplay" type="Sprite2D" parent="Textures/ScaleNode"]
position = Vector2(0, -66.6667)
texture = ExtResource("4_4oeem")

[node name="AttackLabel" type="Label" parent="Textures/ScaleNode/StatDisplay"]
offset_left = -22.0
offset_top = 22.6667
offset_right = -4.0
offset_bottom = 30.6667
theme_override_fonts/font = ExtResource("5_htu7g")
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ActionsLabel" type="Label" parent="Textures/ScaleNode/StatDisplay"]
offset_left = 4.0
offset_top = 22.6667
offset_right = 22.0
offset_bottom = 30.6667
theme_override_fonts/font = ExtResource("5_htu7g")
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardSprite" type="Sprite2D" parent="Textures/ScaleNode"]
material = SubResource("ShaderMaterial_ve337")
texture = ExtResource("2_iwdq0")

[node name="ColorRect" type="ColorRect" parent="Textures/ScaleNode/CardSprite"]
z_index = -1
offset_left = -22.3333
offset_top = -29.3333
offset_right = 25.6667
offset_bottom = 33.6667
color = Color(0, 0, 0, 0.4)

[node name="TagCircle" type="AnimatedSprite2D" parent="Textures/ScaleNode/CardSprite"]
visible = false
z_index = 1
position = Vector2(18.6667, -26.6667)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_gpudn")
autoplay = "default"
frame_progress = 0.623886

[node name="Area2D" type="Area2D" parent="Textures/ScaleNode/CardSprite/TagCircle"]
collision_layer = 1024
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Textures/ScaleNode/CardSprite/TagCircle/Area2D"]
shape = SubResource("CircleShape2D_arv3v")
disabled = true

[node name="TagSprite" type="Sprite2D" parent="Textures/ScaleNode/CardSprite"]
visible = false
position = Vector2(18.6667, -26.6667)

[node name="SelectBorder" type="AnimatedSprite2D" parent="Textures/ScaleNode"]
visible = false
sprite_frames = SubResource("SpriteFrames_pnysk")
autoplay = "default"
frame_progress = 0.318934

[node name="VBoxContainer" type="VBoxContainer" parent="Textures/ScaleNode"]
offset_left = -21.0
offset_top = 8.0
offset_right = 21.0
offset_bottom = 29.0
theme_override_constants/separation = 1
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Textures/ScaleNode/VBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Textures/ScaleNode/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="Textures/ScaleNode"]
layout_mode = 3
anchors_preset = 0
offset_left = -24.0
offset_top = -59.0
offset_right = -2.0
offset_bottom = -48.0

[node name="PanelContainer" type="PanelContainer" parent="Textures/ScaleNode/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -11.0
offset_right = 11.0
offset_bottom = 11.0
grow_horizontal = 2

[node name="MultDisplay" type="NinePatchRect" parent="Textures/ScaleNode/Control/PanelContainer"]
layout_mode = 2
texture = ExtResource("8_n5cfj")
region_rect = Rect2(0, 0, 16, 11)
patch_margin_left = 3
patch_margin_top = 4
patch_margin_right = 3
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="Textures/ScaleNode/Control/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 1

[node name="AttackLabel" type="Label" parent="Textures/ScaleNode/Control/PanelContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("5_htu7g")
theme_override_font_sizes/font_size = 8
text = "1x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NamnLabel" type="Label" parent="Textures"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -15.0
offset_right = 64.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_ynav2")
theme_override_font_sizes/font_size = 20
text = "Exempel"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
justification_flags = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Textures"]
offset_left = -384.0
offset_top = -88.0
offset_right = -84.0
offset_bottom = -33.0
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Description" parent="Textures/VBoxContainer" instance=ExtResource("9_sttlc")]
visible = false
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Textures"]
visible = false
offset_left = 88.0
offset_top = -88.0
offset_right = 388.0
offset_bottom = -33.0
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Area2D" type="Area2D" parent="."]
z_index = -1
scale = Vector2(3, 3)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_h6pkr")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_pxsia")
animation = &"Ball"
frame = 4
frame_progress = 1.0

[node name="BuyButton" parent="." instance=ExtResource("10_2hy3d")]
position = Vector2(0, 128)
